# pitching_pipeline

./: .gitignore  MLB_Team_Stats.csv  README.md  README_QUERY.md  Starting_Pitchers_IDs.csv  db_utils.py  fetch_logs_mlb_api.py  fetch_probable_pitchers_api.py  full_script.ipynb  game_logs_mlb_api.py  ipy_readme.md  main.py  mlb_api_doc.md  probable_pitchers.ipynb  probable_pitchers_game_logs_20250408.csv  probable_pitchers_with_opponents.csv  pyproject.toml  query_data.py  scrape_opp_team_stats.py  scrape_pitcher_logs.py  scrape_snell_stats.py  scrape_starting_pitchers_logs.ipynb  scraper.py  test_ids.csv  utils.py
.cursor/rules/: always-use-uv.mdc  scrapling  scrapling-rule.mdc
src/: __init__.py
src/cli/: README.md  __init__.py  main.py
src/core/: README.md  __init__.py  db_manager.py  db_utils.py  gamelog_scraper.py  player_utils.py  scraper_manager.py  team_stats_scraper.py
src/core/db/: __init__.py  common.py  database_manager.py  pitcher_utils.py  schema.py  team_utils.py
src/core/logging/: __init__.py  config.py
src/data/: README.md  __init__.py  test_ids.csv
src/docs/: LOGGING.md  README.md  README_QUERY.md
src/scripts/: __init__.py  gamelog_scrape.py  scrape_team_stats.py
src/utils/: README.md  __init__.py
