[project]
name = "pitching-pipeline"
version = "0.1.0"
description = "A tool for scraping MLB pitcher game logs from Baseball Reference"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "selenium",
    "beautifulsoup4",
    "webdriver-manager",
    "tqdm",
    "lxml",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pitching_pipeline"]
