[project]
name = "pitching-pipeline"
version = "0.1.0"
description = "A tool for scraping MLB pitcher game logs from Baseball Reference"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "beautifulsoup4",
    "lxml",
    "requests",
    "ipykernel>=6.29.5",
    "scrapling>=0.2.98",
    "argparse>=1.4.0",
    "mlb-statsapi>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pitching_pipeline"]
